Removed the default max-width to stop the col-1 class forcing the contents (icon) over to the left on smaller screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,11 +142,13 @@ footer {
     float: none;
     margin: 0 auto;
     margin-top: 45px;
+    /* Removing default max-width stops the col-1 class forcing the contents (icon) over to the left on smaller screens.*/
+    max-width: none;
 }
 
 .footer-contents i {
     font-size: 55px;
-    color: #bab0a4;
+    color: #bab0a4;  
 }
 
 /* -------------------------------------------------------------------------- INDEX.HTML */
